--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="settingsChangeUnavailable">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
+    <string name="tourTitle">Bad Salzdetfurth</string>
 </resources>
