--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="tourTitle">Bad Salzdetfurth</string>
     <string name="title_activity_stop_detail">StopDetailActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_tour_map">Tour</string>
 </resources>
